--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-project
 /tests/tests/
 /tests/results/
+assets/plugins/jvectormap/send_email.php
